# estudo-python

./: LICENSE  README.md
01 - Estrutura de dados/: desafio.py
07 - Banco de dados/: 02_injecao_sql.py  03_transacao.py  dbapi.py  meu_banco.sqlite
13 - APIs Assíncronas com FastAPI/dio-blog/: blog.db  database.py  main.py  pyproject.toml  security.py
13 - APIs Assíncronas com FastAPI/dio-blog/Tests/: conftest.py
13 - APIs Assíncronas com FastAPI/dio-blog/Tests/integration/controllers/auth/: test_login.py
13 - APIs Assíncronas com FastAPI/dio-blog/Tests/integration/controllers/post/: test_create_post.py  test_delete_post.py  test_read_all.py  test_read_post.py  test_update_post.py
13 - APIs Assíncronas com FastAPI/dio-blog/controllers/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog/models/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog/services/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog/src/: main.py
13 - APIs Assíncronas com FastAPI/dio-blog/src/controllers/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog/src/models/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog/src/schemas/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog/src/services/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog/src/views/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog/views/: post.py
Dados Externos/: arquivo_csv_json.ipynb  arquivo_txt.ipynb  dados.db  dados.txt  dados_api.json  pessoas.csv  relatorio.json  relatorio.txt  usuario.json
Fundamentos/: comando_for.py  convertendo_tipos.py  estrutura_condicional_alinhada.py  (+18 more)
(+36 files in other folders)
