[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "inregis",email = "inregis1@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.45.0,<0.46.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
